Add a lot of stuff

--- a/index.html
+++ b/index.html
@@ -2,23 +2,32 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
+
 <body>
     <div id="posevalues">
         <h1 id="posevalue1">Pose 1: </h1>
         <h1 id="posevalue2">Pose 2: </h1>
         <h1 id="posevalue3">Pose 3: </h1>
         <h1 id="posevalue4">Pose 4: </h1>
+        <h1 id="scoreText">Score: 0</h1>
     </div>
     <div id="qcontent">
-        <h1 id="quest">Hvornår fik kvinderne stemmeret i Danmark?</h1>
+        <h1 id="quest"></h1>
         <div id="answers">
-            <div class="answer" id="q1">1915</div>
-            <div class="answer" id="q2">1920</div>
+            <div class="answer" id="q1"></div>
+            <div class="answer" id="q2"></div>
             <br>
-            <div class="answer" id="q3">1945</div>
-            <div class="answer" id="q4">1910</div>
+            <div class="answer" id="q3"></div>
+            <div class="answer" id="q4"></div>
             
         </div>
+    </div>
+    <img id="correct" src="https://cdn-icons-png.freepik.com/256/14441/14441011.png">
+    <img id="incorrect" src="https://cdn3.iconfinder.com/data/icons/flat-actions-icons-9/792/Close_Icon-512.png">
+    <div id="hider"></div>
+    <div id="finishedText">
+        <h1>Du blev færdig med Quizzen!</h1>
+        <h1 id="scoreText2">Din Score:  ud af </h1>
     </div>
 
 
