add a lot of stuff

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <div id="qcontent">
         <h1 id="quest"></h1>
         <div id="answers">
+            <img class="poseImg1" src="Imgs/pose 1.png">
             <div class="answer" id="q1"></div>
+            <img class="poseImg1" src="Imgs/pose 2.png">
             <div class="answer" id="q2"></div>
             <br>
+            <img class="poseImg2" src="Imgs/pose 3.png">
             <div class="answer" id="q3"></div>
+            <img class="poseImg2" src="Imgs/pose 4.png">
             <div class="answer" id="q4"></div>
             
         </div>
@@ -29,6 +33,11 @@
         <h1>Du blev færdig med Quizzen!</h1>
         <h1 id="scoreText2">Din Score:  ud af </h1>
     </div>
+    <audio src="Imgs/house.mp3" id="music"></audio>
+    <audio src="Imgs/orch-006-cymbal-rollwav-14781.mp3" id="build"></audio>
+    <audio src="Imgs/correct-choice-43861.mp3" id="correctSound"></audio>
+    <audio src="Imgs/error-4-199275.mp3" id="incorrectSound"></audio>
+    
 
 
 	
